testsuite/tests/saks/should_fail/saks_fail011.stderr

saks_fail011.hs:9:1: error:
    • Couldn't match expected kind: TYPE ('GHC.Types.BoxedRep t0)
                  with actual kind: * -> *
    • In the data type declaration for ‘G’
